# net.zlib-zlib

./: .build  .build01_windows32.sh  .build02_windows64.sh  .build04_artefacts.sh  .build05_artefacts.sh  .docker01_build_on_ubuntu_1604_for_windows.sh  .docker02_build_on_ubuntu_1204.sh  .docker03_build_on_ubuntu_1404.sh  .docker04_build_on_ubuntu_1604.sh  .docker05_build_on_ubuntu_1610.sh  .lxc01_build_windows.sh  .lxc02_build_ubuntu_1204_x64.sh  .lxc03_build_ubuntu_1204_x86.sh  .lxc04_build_ubuntu_1404_x64.sh  .lxc07_build_ubuntu_1604_x86.sh  .lxc08_build_ubuntu_1610_x64.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1610_x64.sh  .lxc_build_ubuntu_1610_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_ubuntu_1710_x64.sh  .lxc_build_ubuntu_1710_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile  build_artifact.py
.github/workflows/: main.yml
cmake/: muhkuh_lua.cmake  platform.cmake
cmake/toolchainfiles/: toolchain_ubuntu_arm64.cmake  toolchain_ubuntu_armhf.cmake
zlib/: CMakeLists.txt
zlib/installer/: CMakeLists.txt  install.lua  install_linux.lua  install_windows.lua  zlib.xml
zlib/patches/: 000_set_project_name_to_net_zlib_zlib.diff  001_disable_examples.diff  002_disable_package_config_file.diff  003_disable_man_file.diff  004_do_not_install_shared_lib.diff  005_create_cmake_package.diff  005_install_development_files_to_dev.diff  006_create_cmake_package.diff  007_rename_static_lib_always_to_libz.diff  008_add_pic_on_linux_64_bit_builds.diff
